--- a/Travel Booking Site/index.html
+++ b/Travel Booking Site/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FlyEasy Flash Sale</title>
+  <title>High-Fly Flash Sale</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 
 <header class="header">
-  <div class="logo">FlyEasy</div>
+  <div class="logo">High-Fly</div>
 
   <input type="checkbox" id="menu-toggle">
   <label for="menu-toggle" class="menu">☰</label>
@@ -32,7 +32,7 @@
 
 
 <section class="features">
-  <h2>Why FlyEasy</h2>
+  <h2>Why High-Fly</h2>
   <div class="feature-box">
     <div>✈️ Non-stop Routes</div>
     <div>🍱 Free Meals & Baggage</div>
@@ -53,7 +53,7 @@
 
     <div class="card highlight">
       <h3>Premium</h3>
-      <p>₹7,999</p>
+      <p>₹9,999</p>
       <p>Extra comfort & meals</p>
     </div>
   </div>
@@ -62,7 +62,7 @@
 <footer>
   <p>📍 International Airport</p>
   <p>📞 +91 1234567890</p>
-  <p>✉️ support@flyeasy.com</p>
+  <p>✉️ highfly@gmail.com</p>
   <p>Twitter | Facebook | Instagram</p>
 </footer>
 
